<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/ic_background"
    tools:context=".ui.fragments.SplashFragment">

    <!--<com.google.android.material.imageview.ShapeableImageView
        android:visibility="gone"
        android:id="@+id/img_logo"
        android:layout_width="@dimen/_96sdp"
        android:layout_height="@dimen/_96sdp"
        android:layout_marginTop="@dimen/_32sdp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_logo"
        app:layout_constraintBottom_toTopOf="@id/text_app_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent" />-->

    <TextView
        android:id="@+id/text_app_title"
        style="@style/MenuTextView"
        android:layout_marginTop="@dimen/_96sdp"
        android:text="@string/app_name_ru"
        app:layout_constraintBottom_toTopOf="@id/text_current_coins"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_current_coins"
        style="@style/MenuTextView.Sub"
        android:text="@string/text_temp_current_coins"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_app_title"
        tools:layout_editor_absoluteX="160dp"
        tools:layout_editor_absoluteY="240dp" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_quizzes"
        style="@style/MenuButton"
        android:layout_marginTop="@dimen/_48sdp"
        android:text="@string/quizzes"
        app:icon="@drawable/ic_quizzes"
        app:layout_constraintBottom_toTopOf="@id/btn_spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/text_current_coins" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_spinner"
        style="@style/MenuButton"
        android:layout_marginTop="@dimen/_8sdp"
        android:text="@string/text_spin_wheel"
        app:icon="@drawable/ic_wheel"
        app:layout_constraintBottom_toTopOf="@id/btn_statistics"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_quizzes" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_statistics"
        style="@style/MenuButton"
        android:layout_marginTop="@dimen/_8sdp"
        android:text="@string/statistics"
        app:icon="@drawable/ic_statistics"
        app:layout_constraintBottom_toTopOf="@id/btn_about"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_spinner" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_about"
        style="@style/MenuButton"
        android:layout_marginTop="@dimen/_8sdp"
        android:text="@string/about"
        app:icon="@drawable/ic_about"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btn_statistics" />


    <View
        android:id="@+id/line_horizontal"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_1sdp"
        android:layout_marginHorizontal="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_4sdp"
        android:background="@color/color_menu_line"
        app:layout_constraintBottom_toTopOf="@id/bottom_buttons_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/bottom_buttons_container"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginBottom="@dimen/_4sdp"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/_8sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:layout_editor_absoluteY="679dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_settings"
            style="@style/MenuButton.Options"
            android:text="@string/settings"
            app:icon="@drawable/ic_settings"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/line_vertical"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/line_horizontal" />

        <View
            android:id="@+id/line_vertical"
            android:layout_width="@dimen/_1sdp"
            android:layout_height="@dimen/_32sdp"
            android:layout_marginHorizontal="@dimen/_8sdp"
            android:layout_marginVertical="@dimen/_4sdp"
            android:layout_marginBottom="@dimen/_8sdp"
            android:background="@color/color_menu_line"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_quit"
            style="@style/MenuButton.Options"
            android:text="@string/quit"
            app:icon="@drawable/ic_quit"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />

    </androidx.appcompat.widget.LinearLayoutCompat>


</androidx.constraintlayout.widget.ConstraintLayout>