<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/shape_background"
    android:orientation="vertical"
    tools:context=".ui.fragments.SplashFragment">

    <View
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <nl.dionsegijn.konfetti.xml.KonfettiView
        android:id="@+id/animation"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/icon_winner"
        android:layout_width="@dimen/_128sdp"
        android:layout_height="@dimen/_128sdp"
        android:layout_marginTop="@dimen/_64sdp"
        android:src="@drawable/ic_winner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title"
        style="@style/WinnerTextView"
        android:layout_marginTop="@dimen/_32sdp"
        android:text="@string/text_congrats"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/icon_winner" />

    <TextView
        android:gravity="center"
        android:id="@+id/text_earned_coins"
        style="@style/WinnerTextView.Sub"
        android:layout_marginTop="@dimen/_16sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title"
        tools:text="@string/text_try_one_more_time" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_home"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginHorizontal="@dimen/_32sdp"
        android:layout_marginBottom="@dimen/_16sdp"
        android:background="@drawable/selector_win_home"
        android:fontFamily="@font/rubik"
        android:gravity="center"
        android:text="@string/text_home"
        android:textColor="@color/color_white"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintBottom_toTopOf="@id/btn_restart" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_restart"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:layout_marginHorizontal="@dimen/_32sdp"
        android:layout_marginBottom="@dimen/_64sdp"
        android:background="@drawable/selector_win_category"
        android:fontFamily="@font/rubik"
        android:gravity="center"
        android:text="@string/text_choose_category"
        android:textColor="@color/color_white"
        android:textSize="@dimen/_16ssp"
        app:layout_constraintBottom_toBottomOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>