<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="@dimen/_8sdp"
        android:background="@drawable/shape_dialog"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/_8sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:layout_marginTop="@dimen/_24sdp"
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/rubik"
            android:text="@string/text_clear_records"
            android:textColor="@color/color_black"
            android:textSize="@dimen/_24ssp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="@dimen/_16sdp"
            android:fontFamily="@font/rubik"
            android:text="@string/dialog_clear_records_text"
            android:textAlignment="center"
            android:textColor="@color/color_black"
            android:textSize="@dimen/_16ssp" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_clear_record_no"
                style="@style/StyleDialogButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/_8sdp"
                android:text="@string/no"
                app:icon="@drawable/ic_check_off" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_clear_record_yes"
                style="@style/StyleDialogButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_8sdp"
                android:text="@string/yes"
                app:icon="@drawable/ic_check" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="@dimen/_64sdp"
        android:layout_height="@dimen/_64sdp"
        android:scaleType="centerCrop"
        android:padding="@dimen/_8sdp"
        android:background="@drawable/shape_oval"
        android:src="@drawable/ic_clear_black"
        app:layout_constraintBottom_toTopOf="@id/dialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/dialog" />

</androidx.constraintlayout.widget.ConstraintLayout>