<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/dialog"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginHorizontal="@dimen/_8sdp"
        android:background="@drawable/shape_dialog"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="@dimen/_8sdp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/rubik"
            android:text="@string/about"
            android:textColor="@color/color_black"
            android:textSize="@dimen/_24ssp"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="@dimen/_16sdp"
            android:layout_marginHorizontal="@dimen/_8sdp"
            android:fontFamily="@font/rubik"
            android:text="@string/text_about_app_full"
            android:textAlignment="center"
            android:textColor="@color/color_black"
            android:textSize="@dimen/_16ssp" />


        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_close"
            style="@style/StyleDialogButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/close"
            android:textAllCaps="true" />


    </androidx.appcompat.widget.LinearLayoutCompat>

    <!--<androidx.appcompat.widget.AppCompatImageView
        android:visibility="invisible"
        android:layout_width="@dimen/_64sdp"
        android:layout_height="@dimen/_64sdp"
        android:background="@drawable/shape_oval"
        android:padding="@dimen/_8sdp"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_info_oval"
        app:layout_constraintBottom_toTopOf="@id/dialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/dialog" />-->

</androidx.constraintlayout.widget.ConstraintLayout>